fix tooltips going offscreen

--- a/src/web/items/ItemTooltip.css
+++ b/src/web/items/ItemTooltip.css
@@ -26,4 +26,12 @@
   border: 2px solid white;
   padding: 0.4em 0.8em;
   background: rgba(0, 0, 0, 0.9);
+  z-index: 1000;
+}
+
+.tooltip-container:hover .tooltip-content.tooltip-below,
+.tooltip-container:focus-within .tooltip-content.tooltip-below {
+  bottom: auto;
+  top: calc(100% + 0.4em);
+  z-index: 1000;
 }
